重写sso的login逻辑

--- a/itoken-service-sso/src/main/resources/templates/login.html
+++ b/itoken-service-sso/src/main/resources/templates/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge">
     <title>iToken - 登录</title>
-    <link rel="stylesheet" href="/static/assets"/>
+    <meta content="width=device-width, initial-scale=1, maximun-scale=1, user-scalable=no" name="viewport"/>
+<!--    <link rel="stylesheet" href="/static/assets/bower_components/bootstrap/dist/css/bootstrap.min.css"/>-->
 </head>
 <body class = "hold-transition login-page">
     <div class = "login-logo">
@@ -15,9 +16,9 @@
         <p class="login-box-msg">欢迎管理员登录</p>
 
         <form action="/login" method="post">
-            <div class="alert alert-danger alert-dismissible">
-                <button type="button" class="close" data-dismissible="alert" aria-hidden="true">&times;</button>
-            </div>
+<!--            <div class="alert alert-danger alert-dismissible">-->
+<!--                <button type="button" class="close" data-dismissible="alert" aria-hidden="true">&times;</button>-->
+<!--            </div>-->
 
             <div class="form-group has feedback">
                 <input name="loginCode" type="email" class="form-control" placeholder="邮箱">
