--- a/itoken-service-sso/src/main/resources/templates/login.html
+++ b/itoken-service-sso/src/main/resources/templates/login.html
@@ -16,9 +16,10 @@
         <p class="login-box-msg">欢迎管理员登录</p>
 
         <form action="/login" method="post">
-<!--            <div class="alert alert-danger alert-dismissible">-->
-<!--                <button type="button" class="close" data-dismissible="alert" aria-hidden="true">&times;</button>-->
-<!--            </div>-->
+            <div class="alert alert-danger alert-dismissible" th:if="${message != null}">
+                <button type="button" class="close" data-dismissible="alert" aria-hidden="true">&times;</button>
+                <span th:text="${message}"></span>
+            </div>
 
             <div class="form-group has feedback">
                 <input name="loginCode" type="email" class="form-control" placeholder="邮箱">
