修改登录页面，添加已登录逻辑

--- a/itoken-service-sso/src/main/resources/templates/login.html
+++ b/itoken-service-sso/src/main/resources/templates/login.html
@@ -13,7 +13,12 @@
     </div>
 
     <div class="login-box-body">
-        <p class="login-box-msg">欢迎管理员登录</p>
+        <th:block th:if="${tbSysUser != null}">
+            <p class="login-box-msg">欢迎 <span th:text="${tbSysUser.userName}"></span> 登录</p>
+        </th:block>
+        <th:block th:if="${tbSysUser == null}">
+            <p class="login-box-msg">欢迎管理员登录</p>
+        </th:block>
 
         <form action="/login" method="post">
             <div class="alert alert-danger alert-dismissible" th:if="${message != null}">
