--- a/itoken-service-sso/src/main/resources/templates/login.html
+++ b/itoken-service-sso/src/main/resources/templates/login.html
@@ -14,42 +14,41 @@
 
     <div class="login-box-body">
         <th:block th:if="${tbSysUser != null}">
-            <p class="login-box-msg">欢迎 <span th:text="${tbSysUser.userName}"></span> 登录</p>
+            <p class="login-box-msg">欢迎 <span th:text="${tbSysUser.userName}"></span> 回来</p>
         </th:block>
         <th:block th:if="${tbSysUser == null}">
             <p class="login-box-msg">欢迎管理员登录</p>
-        </th:block>
+            <form action="/login" method="post">
+                <div class="alert alert-danger alert-dismissible" th:if="${message != null}">
+                    <button type="button" class="close" data-dismissible="alert" aria-hidden="true">&times;</button>
+                    <span th:text="${message}"></span>
+                </div>
 
-        <form action="/login" method="post">
-            <div class="alert alert-danger alert-dismissible" th:if="${message != null}">
-                <button type="button" class="close" data-dismissible="alert" aria-hidden="true">&times;</button>
-                <span th:text="${message}"></span>
-            </div>
-
-            <div class="form-group has feedback">
-                <input name="loginCode" type="email" class="form-control" placeholder="邮箱">
-                <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-            </div>
-            <div class="form-group has feedback">
-                <input name="password" type="password" class="form-control" placeholder="密码">
-                <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-            </div>
-            <div class="row">
-                <div class="col-xs-8">
-                    <div class="checkbox icheck">
-                        <label>
-                            <input name="isRemember" type="checkBox">记住我
-                        </label>
+                <div class="form-group has feedback">
+                    <input name="loginCode" type="email" class="form-control" placeholder="邮箱">
+                    <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                </div>
+                <div class="form-group has feedback">
+                    <input name="password" type="password" class="form-control" placeholder="密码">
+                    <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                </div>
+                <div class="row">
+                    <div class="col-xs-8">
+                        <div class="checkbox icheck">
+                            <label>
+                                <input name="isRemember" type="checkBox">记住我
+                            </label>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-xs-4">
-                <button type="submit" class="btn btn-primary btn-block btn-flat">登录</button>
-            </div>
-        </form>
+                <div class="col-xs-4">
+                    <button type="submit" class="btn btn-primary btn-block btn-flat">登录</button>
+                </div>
+            </form>
+            <a href="#">忘记密码？</a>
+        </th:block>
 
-        <a href="#">忘记密码？</a>
     </div>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
