--- a/itoken-service-sso/src/main/resources/templates/login.html
+++ b/itoken-service-sso/src/main/resources/templates/login.html
@@ -5,7 +5,8 @@
     <meta http-equiv="x-ua-compatible" content="IE=edge">
     <title>iToken - 登录</title>
     <meta content="width=device-width, initial-scale=1, maximun-scale=1, user-scalable=no" name="viewport"/>
-<!--    <link rel="stylesheet" href="/static/assets/bower_components/bootstrap/dist/css/bootstrap.min.css"/>-->
+    <link rel="stylesheet" th:href="/static/assets/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+
 </head>
 <body class = "hold-transition login-page">
     <div class = "login-logo">
