--- a/itoken-service-sso/src/main/resources/templates/login.html
+++ b/itoken-service-sso/src/main/resources/templates/login.html
@@ -19,7 +19,11 @@
         </th:block>
         <th:block th:if="${tbSysUser == null}">
             <p class="login-box-msg">欢迎管理员登录</p>
+
             <form action="/login" method="post">
+
+                <input type="hidden" name="url" th:value="${url}">
+
                 <div class="alert alert-danger alert-dismissible" th:if="${message != null}">
                     <button type="button" class="close" data-dismissible="alert" aria-hidden="true">&times;</button>
                     <span th:text="${message}"></span>
