--- a/itoken-web-posts/src/main/resources/templates/index.html
+++ b/itoken-web-posts/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>itoken-文章管理</title>
 </head>
 <body>
     Hello Itoken Web Admin / POSTS
